# cumib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aarch64.html  cache.html  code_gpu_with_cuda_0.html  code_gpu_with_cuda_1.html  code_gpu_with_cuda_2.html  code_gpu_with_cuda_3.html  code_gpu_with_cuda_4.html  code_gpu_with_cuda_5.html  code_gpu_with_cuda_6.html  code_gpu_with_cuda_memory_subsystem.html  cuda1.html  cuda2.html  cuda3.html  cuda_assert.cuh  cudassert.cuh  cumib.cuh  demystifying_assembler.html  dptr.cuh  flatten.cuh  global_load.cu  index.html  laneid.cu  makefile  mapped.cu  mat.cuh  memory.cuh  microbench.html  operations.cu  operations.cuh  optimization.html  optimization_order.html  optimization_rules.html  params.json  perf_test.cuh  pragmatic_optimization.html  pragmatic_optimization_compiler.html  (+10 more)
3dparty/reveal/: README.md
3dparty/reveal/css/: reveal.css
3dparty/reveal/css/print/: pdf.css
3dparty/reveal/plugin/highlight/: highlight.js
3dparty/reveal/plugin/print-pdf/: print-pdf.js
3dparty/reveal/plugin/zoom-js/: zoom.js
3dparty/reveal/test/: test-markdown.html  test.html  test.js
css/: colors-green.css  colors-orange.css  styles.css
materials/: GF108-L1-ca-16KB.txt  GF108-L1-ca-48KB.txt  GK107-TexL1-12KB.txt  GK110-TexL1-12KB-ECC.txt  K20A-L1-ca-16KB.txt  K20A-L2-ca-128KB.txt
plugin/highlight/: highlight.js
plugin/reveal/css/print/: pdf.css
plugin/reveal/css/theme/: geek.css
stylesheets/: cuda.css  cuda.geek.css  styles.css
